--- a/Birthday invite.html
+++ b/Birthday invite.html
@@ -5,7 +5,7 @@
 <p>
     <ul>
         <li>Baloon ( I love Baloon)</li>
-        <li>Cake ( I am really good at eating)</li>
+        <li>Cake ( I am good at eating)</li>
         <li>Food ( There will be lots of food)</li>
     </ul>
 </p>
